--- a/inicio.html
+++ b/inicio.html
@@ -18,9 +18,9 @@
 
         <nav class="menu-desktop">
             <ul>
-                <li><a href="natureza.html" target="_blank">Fazer Novo Cadastro</a></li>
-                <li><a href="humanas.html" target="_blank">Ver Cadastros</a></li>
-                <li><a href="linguagens.html" target="_blank">Controle de Entrada e Saída</a></li>
+                <li><a href="" target="_blank">Fazer Novo Cadastro</a></li>
+                <li><a href="" target="_blank">Ver Cadastros</a></li>
+                <li><a href="" target="_blank">Controle de Entrada e Saída</a></li>
             </ul>
         </nav>
     </div><!--interface-->
